[project]
name = "comms"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8",
    "flake8-pyproject"
]

[tool.flake8]
ignore = [
    "E501",  # line too long
]
